<resources>
    <string name="app_name">My Application</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">×</string>
    <string name="chu">÷</string>
    <string name="point">.</string>
    <string name="deng">=</string>
    <string name="qing">C</string>
    <string name="sqrt">√</string>
    <string name="zhengfu">+/-</string>
</resources>