<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.example.myapplication.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/myTextView"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="34sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="34sp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="34sp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="34sp"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="34sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="34sp"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="34sp"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="34sp"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="34sp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="34sp"
                app:layout_column="1"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonJia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jia"
                android:textSize="34sp"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonJian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jian"
                android:textSize="34sp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonCheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheng"
                android:textSize="34sp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonChu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chu"
                android:textSize="34sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="34sp"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonDeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deng"
                android:textSize="34sp"
                app:layout_column="3"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qing"
                android:textSize="34sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/ButtonTuige"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="D"
                android:textSize="34sp"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonSqrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sqrt"
                android:textSize="34sp"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonzf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhengfu"
                android:textSize="34sp"
                app:layout_column="2"
                app:layout_row="4" />

        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>